--- a/stackgres-k8s/install/helm/stackgres-cluster/requirements.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/requirements.yaml
@@ -2,4 +2,4 @@ dependencies:
   - name: minio
     version: 2.5.18
     repository: https://kubernetes-charts.storage.googleapis.com/
-    condition: minio.create
+    condition: nonProductionOptions.createMinio
