feat: Move MinIO to nonProductionOptions section in cluster helm chart

--- a/stackgres-k8s/e2e/spec/enable-anti-affinity.values.yaml
+++ b/stackgres-k8s/e2e/spec/enable-anti-affinity.values.yaml
@@ -11,7 +11,6 @@ cluster:
   configurations:
     sgBackupConfig: null
   prometheusAutobind: false
-minio:
-  create: false
 nonProductionOptions:
+  createMinio: false
   disableClusterPodAntiAffinity: false
