--- a/stackgres-k8s/e2e/spec/no-pgbouncer.values.yaml
+++ b/stackgres-k8s/e2e/spec/no-pgbouncer.values.yaml
@@ -12,5 +12,5 @@ cluster:
   configurations:
     sgBackupConfig: null
   prometheusAutobind: false
-minio:
-  create: false
+nonProductionOptions:
+  createMinio: false
