--- a/stackgres-k8s/e2e/spec/prometheus-integration.values.yaml
+++ b/stackgres-k8s/e2e/spec/prometheus-integration.values.yaml
@@ -11,5 +11,5 @@ cluster:
   configurations:
     sgBackupConfig: null
   prometheusAutobind: true
-minio:
-  create: false
+nonProductionOptions:
+  createMinio: false
