--- a/stackgres-k8s/e2e/spec/restore.backup.values.yaml
+++ b/stackgres-k8s/e2e/spec/restore.backup.values.yaml
@@ -26,5 +26,5 @@ cluster:
     persistentVolume:
       size: 128Mi
   prometheusAutobind: false
-minio:
-  create: false
+nonProductionOptions:
+  createMinio: false
