--- a/stackgres-k8s/e2e/spec/restore.values.yaml
+++ b/stackgres-k8s/e2e/spec/restore.values.yaml
@@ -14,5 +14,5 @@ cluster:
     restore:
       downloadDiskConcurrency: 1
   prometheusAutobind: false
-minio:
-  create: false
+nonProductionOptions:
+  createMinio: false
