--- a/stackgres-k8s/e2e/spec/aks/backup-with-aks-storage.values.yaml
+++ b/stackgres-k8s/e2e/spec/aks/backup-with-aks-storage.values.yaml
@@ -24,5 +24,5 @@ cluster:
     persistentVolume:
       size: 128Mi
   prometheusAutobind: false
-minio:
-  create: false
+nonProductionOptions:
+  createMinio: false
