--- a/stackgres-k8s/e2e/spec/distributed-logs.values.yaml
+++ b/stackgres-k8s/e2e/spec/distributed-logs.values.yaml
@@ -17,7 +17,6 @@ cluster:
   configurations:
     sgBackupConfig: null
   prometheusAutobind: false
-minio:
-  create: false
 nonProductionOptions:
+  createMinio: false
   disableClusterPodAntiAffinity: true
