--- a/stackgres-k8s/e2e/spec/eks/backup-with-s3-storage.values.yaml
+++ b/stackgres-k8s/e2e/spec/eks/backup-with-s3-storage.values.yaml
@@ -23,5 +23,5 @@ cluster:
     persistentVolume:
       size: 128Mi
   prometheusAutobind: false
-minio:
-  create: false
+nonProductionOptions:
+  createMinio: false
