--- a/stackgres-k8s/e2e/spec/gke/backup-with-gce-storage.values.yaml
+++ b/stackgres-k8s/e2e/spec/gke/backup-with-gce-storage.values.yaml
@@ -20,5 +20,5 @@ cluster:
     persistentVolume:
       size: 128Mi
   prometheusAutobind: false
-minio:
-  create: false
+nonProductionOptions:
+  createMinio: false
