fix: execute integrate grafana job after installing operator

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/integrate-grafana-job.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/integrate-grafana-job.yaml
@@ -8,8 +8,7 @@ metadata:
     app: StackGres
     scope: integrate-grafana
   annotations:
-    "helm.sh/hook": post-install
-    "helm.sh/hook": post-upgrade
+    "helm.sh/hook": post-install,post-upgrade
     "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
 spec:
   template:
