fix: changed integrate grafana labels to avoid being deleted by operator

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/integrate-grafana-job.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/integrate-grafana-job.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: {{ .Release.Namespace }}
   name: "{{ .Release.Name }}-integrate-grafana"
   labels:
-    app: StackGres
+    app: stackgres-integrate-grafana
     scope: integrate-grafana
   annotations:
     "helm.sh/hook": post-install,post-upgrade
@@ -14,7 +14,7 @@ spec:
   template:
     metadata:
       labels:
-        app: StackGres
+        app: stackgres-integrate-grafana
         scope: integrate-grafana
     spec:
       serviceAccountName: {{ .Release.Name }}
