chore: Update Maven Wrapper and Maven to 3.6.3
This commit also improves the performance of the build by setting -XX:TieredStopAtLevel=1

--- a/stackgres-k8s/src/operator/pom.xml
+++ b/stackgres-k8s/src/operator/pom.xml
@@ -296,7 +296,7 @@
                       <name>ongres-jvm-builder</name>
                       <build>
                         <cleanup>remove</cleanup>
-                        <from>ongres/builder</from>
+                        <from>quay.io/buildah/stable:v1.14.8</from>
                         <assembly>
                           <targetDir>/operator</targetDir>
                           <inline>
@@ -377,7 +377,7 @@
                       <name>ongres-native-builder</name>
                       <build>
                         <cleanup>remove</cleanup>
-                        <from>ongres/builder</from>
+                        <from>quay.io/buildah/stable:v1.14.8</from>
                         <assembly>
                           <targetDir>/operator</targetDir>
                           <inline>
