--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,6 +65,7 @@ native image:
     - stackgres-runner
   dependencies:
     - compile
+  timeout: 1 hour
   script:
     - MAVEN_CLI_OPTS="$MAVEN_CLI_OPTS -DskipTests"
     - 'flock -w 3600 /tmp/stackgres-build-native mvn $MAVEN_CLI_OPTS package -P native'
@@ -105,6 +106,7 @@ build test images:
     - stackgres-runner
   dependencies:
     - compile
+  timeout: 1 hour
   retry: 2
   script:
     - MAVEN_CLI_OPTS="$MAVEN_CLI_OPTS -DskipTests -Dquarkus.skipAugmentation=true"
@@ -116,6 +118,7 @@ build jvm image:
     - stackgres-runner
   dependencies:
     - compile
+  timeout: 1 hour
   retry: 2
   script:
     - 'export IMAGE_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_SHORT_SHA"}"-jvm'
@@ -130,6 +133,7 @@ build native image:
   dependencies:
     - compile
     - native image
+  timeout: 1 hour
   retry: 2
   script:
     - 'export IMAGE_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_SHORT_SHA"}"'
@@ -150,6 +154,7 @@ integration test:
     - stackgres-runner
   dependencies:
     - compile
+  timeout: 1 hour
   script:
     - |
       flock -s -w 3600 /tmp/stackgres-build-native \
@@ -168,6 +173,7 @@ integration test jvm image:
   variables:
     OPERATOR_IN_KUBERNETES: "true"
     K8S_SUFFIX: jvm-image
+  timeout: 1 hour
   script:
     - 'export IMAGE_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_SHORT_SHA"}"-jvm'
     - 'export IMAGE_NAME="stackgres/operator:$IMAGE_TAG"'
@@ -187,6 +193,7 @@ integration test native image:
     OPERATOR_IN_KUBERNETES: "true"
     K8S_SUFFIX: native-image
     SKIP_QUARKUS_TEST: "true"
+  timeout: 1 hour
   script:
     - 'export IMAGE_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_SHORT_SHA"}"'
     - 'export IMAGE_NAME="stackgres/operator:$IMAGE_TAG"'
