--- a/stackgres-k8s/install/helm/stackgres-operator/templates/secret.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/secret.yaml
@@ -1,3 +1,5 @@
+ {{- if .Values.authentication }}
+ {{- if or .Values.authentication.user .Values.authentication.password }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -5,9 +7,19 @@ metadata:
   namespace: {{ .Release.Namespace }}
 type: Opaque
 data:
-  user: "{{ .Values.authentication.user | b64enc }}"
-  password: "{{ .Values.authentication.password | b64enc }}"
+  user: {{ if .Values.authentication.user }}{{ .Values.authentication.user | b64enc | quote }}{{ else }}{{ randAlphaNum 20 | b64enc | quote }}{{ end }}
+  password: {{ if .Values.authentication.password }}{{ .Values.authentication.password | b64enc | quote }}{{ else }}{{ randAlphaNum 40 | b64enc | quote }}{{ end }}
+{{- end }}
+{{- end }}
+---
 {{- if or .Values.cert.key .Values.cert.crt }}
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ .Release.Name }}-certs
+  namespace: {{ .Release.Namespace }}
+type: Opaque
+data:
   {{- if .Values.cert.key }}
   root.key: {{ .Values.cert.key }}
   {{- end }}
