--- a/stackgres-k8s/install/helm/stackgres-operator/templates/certificate-secret.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/certificate-secret.yaml
@@ -1,3 +1,4 @@
+{{- if and .Values.cert.key .Values.cert.crt }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -9,12 +10,7 @@ metadata:
   labels:
     app.kubernetes.io/managed-by: Helm
 type: Opaque
-{{- if or .Values.cert.key .Values.cert.crt }}
 data:
-  {{- if .Values.cert.key }}
   root.key: {{ .Values.cert.key }}
-  {{- end }}
-  {{- if .Values.cert.crt }}
   server.crt: {{ .Values.cert.crt }}
-  {{- end }}
 {{- end }}
