fix: add helm annotations to authentication secret

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/authentication-secret.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/authentication-secret.yaml
@@ -5,6 +5,11 @@ kind: Secret
 metadata:
   name: {{ .Release.Name }}
   namespace: {{ .Release.Namespace }}
+  annotations:
+    meta.helm.sh/release-name: {{ .Release.Name }}
+    meta.helm.sh/release-namespace: {{ .Release.Namespace }}
+  labels:
+    app.kubernetes.io/managed-by: Helm
 type: Opaque
 data:
   user: {{ if .Values.authentication.user }}{{ .Values.authentication.user | b64enc | quote }}{{ else }}{{ randAlphaNum 20 | b64enc | quote }}{{ end }}
